Fixed up a about me page and a new category page

--- a/posts/click-me.mdx
+++ b/posts/click-me.mdx
@@ -1,6 +1,11 @@
 ---
-title: Click me Too!
+title: New Website who dis
 date: 2022-02-28
+categories:
+  - ContentLayer
+  - NextJS
+  - Website
+description: I've been working on a new website for a while now. Here's what I've learned.
 ---
 
 Blog posts have their own pages. The content source is a markdown file, parsed to HTML by Contentlayer.
