Fixed up article

--- a/posts/click-me.mdx
+++ b/posts/click-me.mdx
@@ -46,6 +46,31 @@ You can even declare computed types which will allow you to do some transformati
 }
 ```
 
+<Callout>
+  I was a bit lazy to work out all the individual styling so I copied the
+  styling off this repository
+  [here](https://github.com/ekomenyong/ekomenyong.com). Major shout to Ekom
+  Enyong for getting it all nailed down and providing some useful components.
+</Callout>
+
 ## NextJS V13
 
-I like this a lot - I initially had some trouble adjusting to the new manner at which
+I like this a lot - I initially had some trouble adjusting to the new manner in which the pages are structured but I got used to it pretty quickly.
+
+<Callout>
+  I posted a quick thread about it on twitter
+  [here](https://twitter.com/ivanleomk/status/1647619002162884609) about some of
+  my thoughts about the new Next JS 13 release after using it for a while.
+</Callout>
+
+What I've found extremely useful is the colocation of files within a specific folder. While my use case is not sufficiently complex, I've found it to be more intuitive when you can see things that way.
+
+# Goal for this website
+
+I think the overall goal for this website is two fold
+
+1. As I continue experimenting and exploring my interest in AI, I'd like there to be a nice repository of my past work so that I can continue to build on it and improve it.
+
+2. I'd also like to keep myself accountable and start building and shipping products instead of just leaving them to limbo on my local machine and github.
+
+Excited for what is to come.
