Added tweet generation woot

--- a/posts/click-me.mdx
+++ b/posts/click-me.mdx
@@ -19,6 +19,8 @@ So without ado, let's see what are some of the new additions.
 
 > You can check out Content Layer [here](https://www.contentlayer.dev/)
 
+<StaticTweet id="1642958447120646144" />
+
 If I could sum up what I liked about content layer, it would be that it's a very simple way to create a CMS. It's also very flexible and you can use it with any framework.
 
 You simply declare a schema and point them to a content directory. They then parse it and give it to you in a typesafe manner which you can then query and use in your frontend.
@@ -62,6 +64,8 @@ I like this a lot - I initially had some trouble adjusting to the new manner in 
   [here](https://twitter.com/ivanleomk/status/1647619002162884609) about some of
   my thoughts about the new Next JS 13 release after using it for a while.
 </Callout>
+
+<StaticTweet id="1647619002162884609" />
 
 What I've found extremely useful is the colocation of files within a specific folder. While my use case is not sufficiently complex, I've found it to be more intuitive when you can see things that way.
 
