Fixed up content

--- a/posts/click-me.mdx
+++ b/posts/click-me.mdx
@@ -17,7 +17,9 @@ So without ado, let's see what are some of the new additions.
 
 #### Content Layer
 
-> You can check out Content Layer [here](https://www.contentlayer.dev/)
+<Callout>
+  You can check out Content Layer [here](https://www.contentlayer.dev/)
+</Callout>
 
 <StaticTweet id="1642958447120646144" />
 
@@ -59,11 +61,8 @@ You can even declare computed types which will allow you to do some transformati
 
 I like this a lot - I initially had some trouble adjusting to the new manner in which the pages are structured but I got used to it pretty quickly.
 
-<Callout>
-  I posted a quick thread about it on twitter
-  [here](https://twitter.com/ivanleomk/status/1647619002162884609) about some of
-  my thoughts about the new Next JS 13 release after using it for a while.
-</Callout>
+I posted a quick thread about it on twitter about some of
+my thoughts about the new Next JS 13 release after using it for a while.
 
 <StaticTweet id="1647619002162884609" />
 
