Adding in changes from new article

--- a/posts/using-cloudflare-workers-in-nextjs.mdx
+++ b/posts/using-cloudflare-workers-in-nextjs.mdx
@@ -1,6 +1,6 @@
 ---
 title: Handling File Uploads with Cloudflare Workers
-date: 2022-04-29
+date: 2023-04-29
 categories:
   - R2
   - Cloudflare Workers
@@ -446,7 +446,7 @@ Object Not Found
 ```
 
 
-# Publishing your Worker
+## Publishing your Worker
 
 Publishing your worker is as simple as simply running the command as 
 
