Updated pr review config

--- a/posts/fastai.mdx
+++ b/posts/fastai.mdx
@@ -56,6 +56,7 @@ Choosing the right learning rate is very important! If we choose one that's too 
 
 We measure the quality of our prediction using a loss function. It's important here to choose the right loss function. **This needs to be a reasonably smooth function without big flat sections and large jumps**. This is because we want to be able to use the gradient of the loss function to adjust our weights.
 
+Often times, we'll be working with large datasets. So we perform this optimisation in minibatches - whereby we operate on portions of our data set and 
 
 ## Deployment
 
