--- a/posts/machine-learning-roadmap.mdx
+++ b/posts/machine-learning-roadmap.mdx
@@ -20,6 +20,7 @@ Now, this isn't my first foray into machine learning. I'd done a previous resear
 
 So, anyway - let's move on to the plan.
 
+
 ## The Plan
 
 I'll be updating this plan as we go along simply because it's going to keep growing 
@@ -30,3 +31,15 @@ I'll be updating this plan as we go along simply because it's going to keep grow
 4. Designing Machine Learning Systems 
 5. Machine Learning System Design Interview
 
+
+## The Progress
+
+### May
+
+I've managed to finish up Part 1 of Fast AI's course and boy have I learnt a lot about machine learning in general. The course seems to cover a lot more of traditional machine learning techniques and there's a lot which I'll definitely need to revisit.  You can read my notes here [FastAI Part 1](/blog/notes_on_fast_ai)
+
+### June
+
+June has just started and my plan now is to work on more applications of LLMs. I believe that using LLMs to augment my learning will help tremendously when it comes to generating new insights and finding interesting angles to explore. 
+
+The plan is to build a local LLM using gpt to be able to query and discover new insights about my previous notes and chats. Look out for more articles to come.
