--- a/posts/crawling-google-maps-saved-list.mdx
+++ b/posts/crawling-google-maps-saved-list.mdx
@@ -5,8 +5,9 @@ categories:
   - Selenium
   - Pydantic
   - Web Scraping
+  - Streamlit
 description:
-  Google Maps sucks at letting you export your saved places. Here's how to do it
+  Google Maps sucks at letting you sort through your saved places. Let's try to get some more insights into the places that we like
 ---
 
 # Introduction
@@ -252,4 +253,297 @@ with open(csv_file, "w", newline="", encoding="utf-8-sig") as file:
 
 > Note that running this specific file will take you quite some time. I suggest running it in the background while you do other things since we implement a good amount of timeouts so we don't get rate limited.
 
+## Classification with GPT
 
+
+Now that we have our data, we can go beyond just scraping the data and actually do something with it. In my case, I scrapped a total of ~86 different entries so I went ahead and manually rated them on a scale of 1-10. 
+
+This gives us a df with the following columns
+
+
+
+```python
+> df.columns()
+Index(['title', 'rating', 'number_of_reviews', 'address', 'review',
+       'hasDelivery', 'hasTakeaway', 'hasDineIn', 'category', 'status', 'url',
+       'long', 'lat', 'country'],
+      dtype='object')
+```
+
+<Callout>
+
+Most of the code here for classification was modified from the following tweet which you can check out [here](https://twitter.com/_ScottCondron/status/1674420258080452610)
+
+</Callout>
+
+<KommyImage src = "/images/ScottCondron_Tweet.png" height = {200} width = {200} blogImage={true} />
+
+### Pydantic Models
+
+As always, we start by defining a simple `pydantic` model to store our data for each individual restaurant
+
+```python
+class Location(BaseModel):
+    title:str
+    rating:float
+    number_of_reviews:int
+    user_review:str
+    categories:list[str]
+```
+
+We can then create a simple function to extract all of the data from our dataframe 
+
+<CodeTitle title = "Extract Data From Dataframe" lang = "py" />
+```python
+locations = []
+
+for row in df.itertuples():
+    location = Location(
+        title = row.title,
+        rating = row.rating/2,
+        number_of_reviews = row.number_of_reviews,
+        user_review=row.review,
+        categories = [row.category]
+    )
+    locations.append(location)
+```
+
+
+### Yake-ing out the keywords
+
+We first use use the Yake keyword extractor to extract out all the keywords that are present in our text
+
+> Yake is a light weight unsupervised automatic keyword extraction algorithm that uses a small set of heuristics to capture keywords. You can check it out [here](https://github.com/LIAAD/yake)
+
+We can install the library by running the following command
+
+```bash
+pip install git+https://github.com/LIAAD/yake
+```
+
+We can then use the following code to extract out the keywords
+
+<CodeTitle lang = "py" title = "Keyword Extractor" />
+```python
+import yake
+
+kw_extractor = yake.KeywordExtractor()
+keywords = set([])
+
+for row in df.itertuples():
+    formatted_string = f"title: {row.title}, review: {row.review}, category: {row.category}"
+    new_keywords = kw_extractor.extract_keywords(formatted_string)
+    extracted_keywords = [x[0] for x in new_keywords]
+    for extracted_keyword in extracted_keywords:
+      keywords.add(extracted_keyword)
+```
+
+Since Yake is simply extracting out semantic bits which might have useful information, we end up with certain tags which aren't very useful. Here are some examples that don't really make sense 
+
+```python
+['AMAZING',
+ 'AMAZING DUCK',
+ 'AMAZING DUCK BREAST',
+  ....
+  'FUCKING',
+ 'FUCKING AMAZING',
+ 'FUCKING AMAZING DUCK',
+ ]
+```
+
+### GPT Keywords
+
+This is where GPT comes in. We basically get it to look at all our keywords and then generate ~30 categories that can convery the same meaning. If you look at my dataset in the github repo, you'll notice that there are also a good amount of non-english words.
+
+I was a bit lazy to filter it so I decided to just tell GPT to only consider english categories.
+
+<CodeTitle lang = "py" title = "Generate Categories" />
+```python
+class Tags(BaseModel):
+    categories: List[str]
+        
+def generate_categories(keywords):
+    keywords_with_new_lines = '\n'.join(keywords)
+
+    prompt = f"""
+    Invent categories for some restaurants. You are about to be provided with a brief description of a restrautn from google maps.
+    
+    Here are some categories that we have. Only consider english categories.
+    {keywords_with_new_lines}
+    
+    Create 30 short categories that semantically group these keywords.
+    
+    Think step by step
+    """
+    
+    response = openai.ChatCompletion.create(
+        model = "gpt-3.5-turbo-16k",
+        messages = [
+            {'role':'user','content':prompt}
+        ],
+        functions = [
+            {
+                'name': 'output_categories',
+                'description': 'The final list of categories',
+                'parameters':Tags.schema()
+            }
+        ],
+        function_call={
+            'name':'output_categories'
+        }
+    )
+    
+    parsed_json = response.choices[0]["message"]["function_call"]["arguments"]
+    categories = json.loads(parsed_json)["categories"]
+    return categories
+
+res = generate_categories(list(keywords))
+```
+
+Since most of my user reviews had been rather sporadic and inconsistent in length, I thought it wouldn't be useful to force gpt to generate a lot of different recomendations but instead simply focus on a small set of categories - 30 seemed like a good number.
+
+### Categorising 
+
+Once we had our categories, we now need to categorise and assign categories to each individual item with .. gpt again.
+
+<CodeTitle lang = "py" title = "Categorise" />
+```python
+@retry(tries=3, delay=2)
+def tag_restaurant(location:Location,categories:list[str]):
+    joined_categories = '\n'.join(categories)
+    prompt = f"""
+    Given a Restaurant title and a candid user review, return a new list of 4 categories for the following restaurant
+    
+    You can use the following categories
+    {joined_categories}
+    
+    Restaurant Title: {location.title},
+    Existing Categories: [{','.join(location.categories)}]
+    User Review: {location.user_review}
+    
+    You MUST only response with each chose category separated by a new line.
+    You MUST not say anything after finishing.
+    Your response will be used to tag the paper so don't say anything!
+    
+    The 4 Categories:
+    """
+    
+    response = openai.ChatCompletion.create(
+        model = "gpt-3.5-turbo-16k",
+        messages = [
+            {'role':'user','content':prompt}
+        ]
+    )
+    return response["choices"][0]["message"]["content"].split("\n")
+```
+
+Over here, we're using the `retry` package which allows for automatic retries in case the API fails or the function throws an error. This is useful since the API can sometimes fail due to rate limits.
+
+I'd like to also throw an error if a response takes too long but I haven't figured out how to do that yet.
+
+### Putting it all together
+
+Once we've got the categorisation functionality down, all we need is to then work on the actual classification. We can do this by simply iterating through each restaurant and then tagging it with the categories that we generated earlier with our `tag_restaurant` function.
+
+We can do so with the following loop.
+
+<CodeTitle lang = "py" title = "Categorise" />
+```python
+parsed_locations = []
+
+for location in locations:
+    new_categories = tag_restaurant(location,categories)
+    new_location = location.copy()
+    new_location.categories.extend(new_categories)
+    
+    unique_categories = list(
+        set(
+            [i.lower().strip() for i in new_location.categories]
+        )
+    )
+    
+    new_location.categories = [i.title() for i in unique_categories]
+    
+    parsed_locations.append(new_location)
+```
+
+before writing it to a csv with the following function 
+
+```
+def write_locations_to_csv(locations: List[Location], file_name: str):
+    fieldnames = list(Location.schema()["properties"].keys())
+
+    with open(file_name, "w", newline='') as csvfile:
+        writer = csv.DictWriter(csvfile, fieldnames=fieldnames)
+        writer.writeheader()
+
+        for location in locations:
+            writer.writerow(location.dict())
+
+write_locations_to_csv(parsed_locations, "locations.csv")
+```
+
+The results aren't honestly too bad - we can see from the quick screengrab that I took that it was able to accurately tag certain places correctly - the function sometime generated duplicate tags and so the use of a set in our code was useful to remove duplicates.
+
+## Building a UI
+
+I used streamlit to build a quick UI for us to iterate through the different categories and see what the results were like.
+
+<CodeTitle lang = "py" title = "Streamlit UI" />
+```python
+import streamlit as st
+import pandas as pd
+from pydantic import BaseModel
+from typing import List
+
+df = pd.read_csv("./locations.csv")
+
+category_set = set()
+parsed_categories = [
+    [j.strip() for j in i[1:-1].replace("'", "").split(",")]
+    for i in df["categories"].to_list()
+]
+for cat_list in parsed_categories:
+    for cat in cat_list:
+        category_set.add(cat)
+
+
+st.title("Location Filter")
+
+# Filter by title
+title_filter = st.sidebar.text_input("Search by title")
+filtered_df = df[df["title"].str.contains(title_filter, case=False)]
+
+# Filter by categories
+unique_categories = list(category_set)
+selected_categories = st.sidebar.multiselect("Filter by categories", unique_categories)
+filtered_df = filtered_df[
+    filtered_df["categories"].apply(
+        lambda x: any(category in x for category in selected_categories)
+        or len(selected_categories) == 0
+    )
+]
+
+print(unique_categories)
+
+# Filter by number of reviews
+min_reviews, max_reviews = st.sidebar.slider(
+    "Filter by number of reviews",
+    int(df["number_of_reviews"].min()),
+    int(df["number_of_reviews"].max()),
+    (0, int(df["number_of_reviews"].max())),
+)
+filtered_df = filtered_df[
+    (filtered_df["number_of_reviews"] >= min_reviews)
+    & (filtered_df["number_of_reviews"] <= max_reviews)
+]
+
+
+# view_df = filtered_df[["title", "number_of_reviews", "categories"]]
+# Display the filtered DataFrame
+st.write(filtered_df[["title", "number_of_reviews", "rating", "user_review"]])
+```
+
+This is what the UI looks like
+
+<KommyImage src = "/images/streamlit-ui.gif" width = "400" height = "400"  blogImage={true} />
