--- a/posts/crawling-google-maps-saved-list.mdx
+++ b/posts/crawling-google-maps-saved-list.mdx
@@ -469,7 +469,7 @@ for location in locations:
 
 before writing it to a csv with the following function 
 
-```
+```python
 def write_locations_to_csv(locations: List[Location], file_name: str):
     fieldnames = list(Location.schema()["properties"].keys())
 
