Added a new page called work-log

--- a/posts/crawling-google-maps-saved-list.mdx
+++ b/posts/crawling-google-maps-saved-list.mdx
@@ -276,7 +276,7 @@ Most of the code here for classification was modified from the following tweet w
 
 </Callout>
 
-<KommyImage src = "/images/ScottCondron_Tweet.png" height = {200} width = {200} blogImage={true} />
+<StaticTweet id="1674420258080452610" />
 
 ### Pydantic Models
 
